# smc

./: .gitignore  .travis.yml  pyproject.toml  readme.md  readme.rst  setup.py
smc/: __init__.py  smc.py  version.py
