[tool.poetry]
name="smc"
version="0.5.2"
authors = ["walchko <walchko@users.noreply.github.com>"]
keywords=['framework', 'robotic', 'robot', 'motor controller']
description="A python driver library for Pololu's Simple Motor Controllers"
license="MIT"
homepage = "https://pypi.org/project/smc/"
repository = 'http://github.com/MomsFriendlyRobotCompany/smc'
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Topic :: Software Development :: Libraries :: Python Modules'
]

[tool.poetry.dependencies]
python = ">=3.6"
pyserial = "*"
importlib-metadata = {version="*", python="<3.8"}

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
